# img-data-fixer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: action.yml  ruff.yml
img_date_fixer/: cli.py  date_parsing.py  file_utils.py  img_fixer.py
tests/: test_date_parsing.py
