[project]
name = "img_date_fixer"
description = "Small Python CLI application to fill missing metadata of images based on the filename."
version = "0.1.0"
license = {file = "LICENSE"}
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["img_date_fixer"]

[project.scripts]
img_date_fixer = "img_date_fixer.cli:main"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
select = ["E", "W", "F", "C90", "I", "N", "D", "UP", "ANN", "S", "BLE", "B", "A", "COM", "C4", "T20", "RET", "SIM", "PTH", "RUF"]
ignore = ["D100", "D104"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests"
]

# Same as black
line-length = 120

[tool.ruff.pydocstyle]
convention = "google"